# sndsw

./: 2dEventDisplay_8py_source.html  ALPACAGenerator_8cxx.html  ALPACAGenerator_8cxx__incl.dot  ALPACAGenerator_8h.html  ALPACAGenerator_8h__dep__incl.dot  ALPACAGenerator_8h__incl.dot  AbsBField_8h.html  AbsBField_8h__dep__incl.dot  AbsBField_8h__incl.dot  AbsFinitePlane_8cc.html  AbsFinitePlane_8cc__incl.dot  AbsFinitePlane_8h.html  AbsFinitePlane_8h__dep__incl.dot  AbsFinitePlane_8h__incl.dot  AbsFitterInfo_8cc.html  AbsFitterInfo_8cc__incl.dot  AbsFitterInfo_8h.html  AbsFitterInfo_8h__dep__incl.dot  AbsFitterInfo_8h__incl.dot  AbsFitter_8cc.html  AbsFitter_8cc__incl.dot  AbsFitter_8h.html  AbsFitter_8h__dep__incl.dot  AbsHMatrix_8h.html  AbsHMatrix_8h__dep__incl.dot  AbsHMatrix_8h__incl.dot  AbsKalmanFitter_8cc.html  AbsKalmanFitter_8cc__incl.dot  AbsKalmanFitter_8h.html  AbsKalmanFitter_8h__dep__incl.dot  AbsKalmanFitter_8h__incl.dot  AbsMeasurement_8cc.html  AbsMeasurement_8cc__incl.dot  AbsMeasurement_8h.html  AbsMeasurement_8h__dep__incl.dot  AbsMeasurement_8h__incl.dot  AbsTrackRep_8cc.html  AbsTrackRep_8cc__incl.dot  AbsTrackRep_8h.html  AbsTrackRep_8h__dep__incl.dot  (+2503 more)
analysis/: CMakeLists.txt  README.md  makeRunListDB.py  neutrinoFilterGoldenSample.cxx  neutrinoFilterGoldenSample_stage2.py
analysis/core/: CMakeLists.txt  sndEventFilter.cxx  sndFilterProcessBase.h
analysis/cuts/: AnalysisCutsLinkDef.h  CMakeLists.txt  sndAvgDSFiducialCut.cxx  sndAvgDSFiducialCut.h  sndAvgSciFiFiducialCut.cxx  sndAvgSciFiFiducialCut.h  sndBaseCut.h  sndDSActivityCut.cxx  sndDSActivityCut.h  sndDSVetoCut.cxx  sndDSVetoCut.h  sndEventDeltat.cxx  sndEventDeltat.h  (+40 more)
(+263 files in other folders)
